# python-whatsapp-bot

./: README.md  pyproject.toml  view_data.py
app/: views.py
app/utils/: whatsapp_utils.py
mongo_collection/: collection.py
start/: whatsapp_quickstart.py
